# rust_backend

./: .gitignore  Cargo.toml  README.md
logs/: app.log.2025-08-25
migrations/2025-08-25-093018_create_tables/: down.sql  up.sql
src/: main.rs
src/common/: http.rs  mod.rs  token.rs
src/db/: mod.rs  mysql.rs  schema.rs
src/handlers/: user.rs
src/middleware/: authorization.rs  cors.rs  log.rs  mod.rs
src/routes/: mod.rs  ping.rs  user.rs
src/services/: user.rs
