[package]
name = "rust_blog"
version = "0.1.0"
edition = "2024"

# TODO 生产环境features按需引用
[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "local-time"] }
tracing-appender = "0.2"
time = "0.3.41"