[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

# TODO 生产环境features按需引用
[dependencies]
actix-web = { version = "4" }
actix-cors = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "local-time"] }
tracing-appender = "0.2"
time = "0.3.41"
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
anyhow = "1.0.99"
diesel = { version = "2.1.0", features = ["mysql","r2d2"] }
dotenvy = "0.15"
once_cell = "1.21.3"
diesel_migrations = "2.1"